force-app/main/default/objects/TeamGoals__c/TeamGoals__c.object-meta.xml
<CustomObject>
    <description>Object represent goals scored and conceded by each team</description>
    <label>Team Goals</label>
    <nameField>
        <displayFormat>TeamGoals - {000000}</displayFormat>
        <label>Team Goals Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Teams Goals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>