force-app/main/default/objects/TeamGoals__c/fields/GoalDetails__c.field-meta.xml
<CustomField>
    <fullName>GoalDetails__c</fullName>
    <description>Information if goal was scored after a corner, free kick, penalty or after a partner`s pass</description>
    <label>Goal Details</label>
    <length>64</length>
    <type>Text</type>
</CustomField>