force-app/main/default/objects/TeamGoals__c/fields/Minute__c.field-meta.xml
<CustomField>
    <fullName>Minute__c</fullName>
    <description>Minute when goal was scored</description>
    <label>Minute</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>