force-app/main/default/objects/TeamGoals__c/fields/OpponentResistance__c.field-meta.xml
<CustomField>
    <fullName>OpponentResistance__c</fullName>
    <description>Opponent resistance when performing a shot on the goal</description>
    <label>Opponent Resistance</label>
    <length>36</length>
    <type>Text</type>
</CustomField>