force-app/main/default/objects/TeamGoals__c/fields/PlayerPosition__c.field-meta.xml
<CustomField>
    <fullName>PlayerPosition__c</fullName>
    <description>The position of the player during the shot on the goal</description>
    <label>Player Position</label>
    <length>36</length>
    <type>Text</type>
</CustomField>