force-app/main/default/objects/TeamGoals__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Match__c</columns>
    <columns>Team__c</columns>
    <columns>Minute__c</columns>
    <columns>PlayerPosition__c</columns>
    <columns>OpponentResistance__c</columns>
    <columns>GoalDetails__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>